--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -678,6 +678,7 @@ a {
         border: 2px solid $divider-grey;
         border-radius: 6px;
         width: 100%;
+        min-height: 500px;
 
         // -webkit-box-shadow: 0px 2px 0px 0px $divider-grey;
         // -moz-box-shadow: 0px 2px 0px 0px $divider-grey;
