alert gamepad svg

--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -376,6 +376,12 @@ a {
             line-height: 1.5rem;
         }
 
+        .gamepad {
+            margin: auto;
+            width: 5rem;
+            margin-bottom: 1.25rem;
+        }
+
         .mid {
             font-size: 0.9rem;
             font-family: 'Noto Sans', 'Open Sans', sans-serif;
