--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -347,7 +347,7 @@ a {
         border: 2px solid $divider-grey;
         // border-bottom-width: 2px;
         border-radius: 8px;
-        margin: 1.5rem 0;
+        margin: 1.5rem 0 0 0;
         padding: 1.5rem 2rem;
         width: 100%;
         height: max-content;
@@ -456,6 +456,10 @@ a {
             @media (max-width: 425px) {
                 margin: 1.5rem 1rem 1rem 1rem;
                 max-width: none;
+            }
+
+            &:nth-child(1) {
+                margin-top: 0;
             }
 
             &:nth-child(odd) {
