--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -363,7 +363,7 @@ a {
         }
 
         @media (max-width: 425px) {
-            margin: 1.5rem 1rem 1rem 1rem;
+            margin: 1.5rem 1rem 0 1rem;
         }
 
         a, .icon {
