--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -449,17 +449,21 @@ a {
                 flex-direction: column;
                 justify-content: flex-start;
                 max-width: 300px;
-                margin: 3rem 1.5rem 0 1.5rem;
+                margin: 2rem 1.5rem 0 1.5rem;
                 height: 100%;
             }
 
             @media (max-width: 425px) {
-                margin: 1.5rem 1rem 1rem 1rem;
+                margin: 1.5rem 1rem 1rem 1rem !important;
                 max-width: none;
             }
 
             &:nth-child(1) {
                 margin-top: 0;
+
+                @media (max-width: 1024px) {
+                    margin-top: 2rem;
+                }
             }
 
             &:nth-child(odd) {
