--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -58,9 +58,9 @@ a {
     }
 
     .gamepad-icon-link {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        // display: inline;
+        // justify-content: center;
+        // align-items: center;
         height: 2.5rem;
         width: 2.5rem;
         // margin: 0 4rem;
@@ -71,6 +71,70 @@ a {
 
         &:hover {
             border-color: $divider-grey;
+            .gamepad-tooltip {
+                opacity: 1;
+            }
+        }
+
+        .icon-wrapper {
+            display: flex;
+            height: 100%;
+            img {
+                margin: auto;
+            }
+        }
+        
+
+        .gamepad-tooltip {
+            position: relative;
+            top: -1.6rem;
+            left: 3.25rem;
+            width: 6.5rem;
+            height: 1.5rem;
+            margin: 0;
+            background-color: $lighter-smoke;
+            opacity: 0;
+            color: $text-mid;
+            border: 2px solid $mint-green;
+            border-radius: 6px;
+            padding: 0.3rem 0.45rem 0.2rem 0.45rem;
+            font-size: 0.65rem;
+
+            -webkit-transition: opacity 0.15s;
+            transition: opacity 0.15s;
+
+            -webkit-box-shadow: $divider-grey 0px 10px 10px -10px;
+            -moz-box-shadow: $divider-grey 0px 10px 10px -10px;
+            box-shadow: $divider-grey 0px 10px 10px -10px;
+
+            &.show {
+                opacity: 0.9;
+            }
+
+            &:after {
+                content: ' ';
+                position: absolute;
+                left: -0.5rem;
+                top: 0.5rem;
+                border: 0.25rem solid;
+                border-color: $mint-green $mint-green transparent transparent;
+            }
+
+            .tooltip-text {
+                display: flex;
+                // font-variant: small-caps;
+                // line-height: 0.7rem;
+                height: 100%;
+
+                @media (max-width: 768px) {
+                    line-height: 0.6rem;
+                }
+
+                .inner-text {
+                    margin: auto;
+                    // letter-spacing: 0.5px;
+                }
+            }
         }
     }
 
@@ -358,11 +422,12 @@ a {
         color: $text-light;
 
         @media (max-width: 1024px) {
-            max-width: 350px;
+            max-width: 300px;
             margin: 3rem 1.5rem 0 1.5rem;
         }
 
         @media (max-width: 425px) {
+            max-width: none;
             margin: 1.5rem 1rem 0 1rem;
         }
 
@@ -413,12 +478,13 @@ a {
     }
 
     .tag-name {
-        margin: 1rem;
+        margin: 1rem 1rem 3rem 1rem;
         line-height: 1.85rem;
         text-align: center;
 
         @media (max-width: 1024px) {
             max-width: 300px;
+            margin: 1rem;
         }
     }
 
@@ -475,11 +541,14 @@ a {
 
                 .image {
                     border-radius: 0;
+                    border-left: 2px solid $divider-grey;
+                    border-right-width: 0;
                     border-top-right-radius: 6px;
                     border-bottom-right-radius: 6px;
 
                     @media (max-width: 1024px) {
                         border-radius: 0;
+                        border-left-width: 0;
                         border-top-left-radius: 6px;
                         border-top-right-radius: 6px;
                         margin: 0;
@@ -489,12 +558,16 @@ a {
 
             .image {
                 margin: 0;
+                border-right: 2px solid $divider-grey;
+                border-left-width: 0;
                 border-top-left-radius: 6px;
                 border-bottom-left-radius: 6px;
 
                 @media (max-width: 1024px) {
                     margin: 0;
                     border-radius: 0;
+                    border: 0;
+                    border-bottom: 2px solid $divider-grey;
                     border-top-left-radius: 6px;
                     border-top-right-radius: 6px;
                 }
@@ -593,12 +666,13 @@ a {
     .subtitle {
         display: flex;
         flex-flow: row nowrap;
-        color: $mint-green;
-        line-height: 1.5rem;
         margin-top: 1rem;
 
         .icon {
             margin: 0 0.7rem 0 0;
+            line-height: 1.5rem;
+            color: $mint-green;
+            font-size: 1rem;
 
             .icon-right-dir::before {
                 margin: 0;
@@ -606,9 +680,14 @@ a {
         }
 
         .text {
-            font-style: italic;
             margin: 0;
             letter-spacing: 0.5px;
+            line-height: 1.5rem;
+            font-family: 'Noto Sans', 'Open Sans', sans-serif;
+            font-size: 1rem;
+            font-weight: normal;
+            font-style: italic;
+            color: $mint-green;
         }
     }
 
@@ -758,16 +837,19 @@ a {
 
         .link-tooltip {
             position: absolute;
-            top: -0.9rem;
+            top: -1.25rem;
             z-index: 1;
             margin: 0;
-            background-color: transparent;
+            width: 5.25rem;
+            text-align: center;
+            background-color: $lighter-smoke;
             opacity: 0;
             color: $text-mid;
-            border-radius: 3px;
-            padding: 0.3rem 0.4rem 0.25rem 0.4rem;
-            line-height: 0.75rem;
-            font-size: 0.75rem;
+            border: 2px solid $divider-grey;
+            border-radius: 6px;
+            padding: 0.3rem 0.45rem 0.2rem 0.45rem;
+            line-height: 0.8rem;
+            font-size: 0.65rem;
 
             -webkit-transition: opacity 0.15s;
             transition: opacity 0.15s;
@@ -776,16 +858,14 @@ a {
                 opacity: 0.9;
             }
 
-            // &:before {
-            //     content: "\A";
-            //     border-style: solid;
-            //     border-width: 10px 15px 10px 0;
-            //     border-color: transparent $text-lighter transparent transparent;
-            //     position: absolute;
-            //     top: 0.95rem;
-            //     left: 2rem;
-            //     transform: rotate(270deg); 
-            // }
+            &:before {
+                content: ' ';
+                position: absolute;
+                left: 2.25rem;
+                top: 1.3rem;
+                border: 0.25rem solid;
+                border-color: $divider-grey transparent transparent $divider-grey;
+            }
         }
     }
 
