--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -89,15 +89,15 @@ a {
             position: relative;
             top: -1.6rem;
             left: 3.25rem;
-            width: 6.65rem;
+            width: 6.6rem;
             height: 1.5rem;
             margin: 0;
             background-color: $lighter-smoke;
             opacity: 0;
             color: $text-mid;
             border: 2px solid $mint-green;
-            border-radius: 6px;
-            padding: 0.3rem 0.45rem 0.2rem 0.45rem;
+            border-radius: 7px;
+            padding: 0.25rem 0.45rem 0.2rem 0.45rem;
             font-size: 0.65rem;
 
             -webkit-transition: opacity 0.15s;
@@ -114,16 +114,24 @@ a {
             &:after {
                 content: ' ';
                 position: absolute;
-                left: -0.5rem;
-                top: 0.5rem;
+                left: -0.55rem;
+                top: 0.45rem;
                 border: 0.25rem solid;
                 border-color: $mint-green $mint-green transparent transparent;
             }
 
+            // &:before {
+            //     content: ' ';
+            //     position: absolute;
+            //     left: -0.3rem;
+            //     top: 0.55rem;
+            //     border: 0.25rem solid;
+            //     z-index: 2;
+            //     border-color: $lighter-smoke $lighter-smoke transparent transparent;
+            // }
+
             .tooltip-text {
                 display: flex;
-                // font-variant: small-caps;
-                // line-height: 0.7rem;
                 height: 100%;
 
                 @media (max-width: 768px) {
@@ -132,7 +140,6 @@ a {
 
                 .inner-text {
                     margin: auto;
-                    // letter-spacing: 0.5px;
                 }
             }
         }
@@ -837,16 +844,17 @@ a {
 
         .link-tooltip {
             position: absolute;
-            top: -1.25rem;
+            top: -1.3rem;
             z-index: 1;
             margin: 0;
             width: 5.25rem;
+            height: 1.5rem;
             text-align: center;
             background-color: $lighter-smoke;
             opacity: 0;
             color: $text-mid;
             border: 2px solid $divider-grey;
-            border-radius: 6px;
+            border-radius: 7px;
             padding: 0.3rem 0.45rem 0.2rem 0.45rem;
             line-height: 0.8rem;
             font-size: 0.65rem;
@@ -861,8 +869,8 @@ a {
             &:before {
                 content: ' ';
                 position: absolute;
-                left: 2.25rem;
-                top: 1.3rem;
+                left: 2.4rem;
+                top: 1.35rem;
                 border: 0.25rem solid;
                 border-color: $divider-grey transparent transparent $divider-grey;
             }
