--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -1020,6 +1020,12 @@ a {
             }
         }
     }
+
+    .just-comments {
+        .jcGenCls46.jcGen2Cls46 {
+            display: none;
+        }
+    }
 }
 
 .footer {
