--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -548,8 +548,8 @@ a {
 
                 .image {
                     border-radius: 0;
-                    border-left: 2px solid $divider-grey;
-                    border-right-width: 0;
+                    // border-left: 2px solid $divider-grey;
+                    // border-right-width: 0;
                     border-top-right-radius: 6px;
                     border-bottom-right-radius: 6px;
 
@@ -565,16 +565,16 @@ a {
 
             .image {
                 margin: 0;
-                border-right: 2px solid $divider-grey;
-                border-left-width: 0;
+                // border-right: 2px solid $divider-grey;
+                // border-left-width: 0;
                 border-top-left-radius: 6px;
                 border-bottom-left-radius: 6px;
 
                 @media (max-width: 1024px) {
                     margin: 0;
                     border-radius: 0;
-                    border: 0;
-                    border-bottom: 2px solid $divider-grey;
+                    // border: 0;
+                    // border-bottom: 2px solid $divider-grey;
                     border-top-left-radius: 6px;
                     border-top-right-radius: 6px;
                 }
