--- a/src/components/BlogPosts.scss
+++ b/src/components/BlogPosts.scss
@@ -76,8 +76,8 @@ $serif: athelas,georgia,serif;
                 }
 
                 .subtitle {
-                    font-family: $serif;
-                    font-weight: lighter;
+                    font-family: $sans-serif;
+                    font-weight: 300;
                     color: #4cb69f;
                     font-size: 1.25rem;
                     line-height: 1.75rem;
