--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -30,8 +30,8 @@ $serif: athelas,georgia,serif;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
-        align-items: center;
-        font-size: 0.95rem;
+        align-items: flex-end;
+        font-size: 0.85rem;
 
         .date-author {
             font-family: $sans-serif;
@@ -49,6 +49,16 @@ $serif: athelas,georgia,serif;
         .share-button-group {
             display: inherit;
             flex-flow: row nowrap;
+
+            &.top {
+                .share-button {
+                    margin: 0;
+
+                    .icon {
+                        font-size: 1.2rem;
+                    }
+                }
+            }
         }
     }
 
@@ -56,29 +66,55 @@ $serif: athelas,georgia,serif;
         width: 100%;
         max-width: 1000px;
         margin: 2rem 0 1rem 0;
+
+        -webkit-box-shadow: 0.5rem 0.5rem 0 0 #f5f5f5;
+        -moz-box-shadow: 0.5rem 0.5rem 0 0 #f5f5f5;
+        box-shadow: 0.5rem 0.5rem 0 0 #f5f5f5;
     }
 
-    .share-body {
+    .share-tags-body {
         display: flex;
         flex-flow: row nowrap;
         align-content: flex-start;
-
-        .share {
+        .share-tags {
+            flex: 0 200px;
             margin: 1rem 2rem 0 0;
-            border-top: 3px solid black;
-            width: 700px;
+            
+           .share {
+                border-top: 2px solid black;
+                margin-bottom: 3rem;
 
-            .header {
-                font-family: $sans-serif;
-                text-transform: uppercase;
-                letter-spacing: 0.025rem;
-                font-weight: 500;
-                font-size: 0.75rem;
-                // margin-top: 0.75rem;
-            }
+                .header {
+                    font-family: $sans-serif;
+                    text-transform: uppercase;
+                    letter-spacing: 0.025rem;
+                    font-weight: 500;
+                    font-size: 0.75rem;
+                    margin: 0.75rem 0 1.5rem 0;
+                }
+            } 
+
+            .tags {
+                border-top: 2px solid black;
+
+                .header {
+                    font-family: $sans-serif;
+                    text-transform: uppercase;
+                    letter-spacing: 0.025rem;
+                    font-weight: 500;
+                    font-size: 0.75rem;
+                    margin: 0.75rem 0 1.5rem 0;
+                }
+
+                .items {
+                    display: flex;
+                    flex-flow: column nowrap;
+                }
+            } 
         }
 
        .body {
+            flex: 1;
             font-family: $sans-serif;
             font-size: 1.25rem;
             font-weight: 300;
@@ -86,12 +122,22 @@ $serif: athelas,georgia,serif;
 
             a {
                 color: black;
-                text-decoration-color: #4cb69f;
+                text-decoration: none;
+                border-bottom: 2px solid #4cb69f;
 
                 &:hover, &:active, &:focus {
                     color: #4cb69f;
                 }
             }
-        } 
+
+            p:first-of-type {
+                letter-spacing: 0.025rem;
+                font-weight: 500;
+            }
+
+            ul {
+                list-style-type: square;
+            }
+        }
     }
 }
