--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -6,13 +6,15 @@ $serif: athelas,georgia,serif;
         color: black;
         font-size: 2.5rem;
         font-family: $sans-serif;
-        margin: 2rem 0;
+        margin: 2rem 0 1.5rem 0;
+        letter-spacing: -0.025rem;
     }
     .subtitle {
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
-        margin: 1rem 0;
+        margin-bottom: 2.5rem;
+        letter-spacing: 0.025rem;
         line-height: 1.75rem;
 
         // .icon {
@@ -30,15 +32,24 @@ $serif: athelas,georgia,serif;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
-        align-items: flex-end;
-        font-size: 0.85rem;
+        align-items: center;
 
         .date-author {
+            height: max-content;
             font-family: $sans-serif;
-            color: #aaa;
+            font-weight: 500;
+
+            .date {
+                color: #555;
+                margin-bottom: 0.25rem;
+            }
 
             .author {
-                margin-bottom: 0.25rem;
+                color: #999;
+                font-weight: 300;
+                font-style: italic;
+                font-size: 0.85rem;
+                margin: 0;
                     
                 .name {
                     text-transform: uppercase;
@@ -66,6 +77,7 @@ $serif: athelas,georgia,serif;
         width: 100%;
         max-width: 1000px;
         margin: 2rem 0 1rem 0;
+        border-radius: 1px;
 
         -webkit-box-shadow: 0.5rem 0.5rem 0 0 #f5f5f5;
         -moz-box-shadow: 0.5rem 0.5rem 0 0 #f5f5f5;
@@ -113,31 +125,44 @@ $serif: athelas,georgia,serif;
             } 
         }
 
-       .body {
+        .body-and-below {
+            display: inherit;
+            flex-flow: column nowrap;
             flex: 1;
-            font-family: $sans-serif;
-            font-size: 1.25rem;
-            font-weight: 300;
-            line-height: 2rem;
 
-            a {
-                color: black;
-                text-decoration: none;
-                border-bottom: 2px solid #4cb69f;
+            .body {
+                font-family: $sans-serif;
+                font-size: 1.25rem;
+                font-weight: 300;
+                line-height: 2rem;
 
-                &:hover, &:active, &:focus {
-                    color: #4cb69f;
+                a {
+                    color: black;
+                    text-decoration: none;
+                    border-bottom: 1px solid #4cb69f;
+
+                    &:hover, &:active, &:focus {
+                        color: #4cb69f;
+                    }
+                }
+
+                p:first-of-type {
+                    letter-spacing: 0.025rem;
+                    font-weight: 500;
+                }
+
+                ul {
+                    list-style-type: circle;
                 }
             }
 
-            p:first-of-type {
-                letter-spacing: 0.025rem;
-                font-weight: 500;
-            }
-
-            ul {
-                list-style-type: square;
+            .button-row {
+                display: inherit;
+                flex-flow: row nowrap;
+                margin: 2rem 0;
             }
         }
+
+       
     }
 }
