--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -2,10 +2,9 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     border-top: 2px solid black;
     padding: 1rem;
-    margin-bottom: 2.5rem;
 
     .icon-link {
         display: inline-block;
@@ -25,6 +24,20 @@
     .social {
         display: flex;
         flex-flow: row wrap;
+        justify-content: flex-end;
+
+        .button:last-of-type {
+            margin-right: 0;
+        }
+
+        @media (max-width: 768px) {
+            flex-direction: column;
+            align-items: flex-end;
+
+            .button {
+                margin-right: 0;
+            }
+        }
 
         .icon {
             margin-right: 0.5rem;
