--- a/src/components/ShareButton.scss
+++ b/src/components/ShareButton.scss
@@ -15,6 +15,7 @@ $sans-serif: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,
 
     .icon {
         margin: 0 0.5rem 0 0;
+        transition: opacity 0.25s;
 
         .icon-facebook-squared {
             color: #3b5998;
@@ -39,5 +40,6 @@ $sans-serif: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,
         font-family: $sans-serif;
         font-weight: 900;
         color: #333;
+        transition: opacity 0.25s;
     }
 }
