--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -6,6 +6,10 @@
     border-top: 2px solid black;
     padding: 1rem;
 
+    // @media (max-width: 768px) {
+    //     align-items: flex-start;
+    // }
+
     .icon-link {
         display: inline-block;
         border: 2px solid #4cb69f;
