--- a/src/components/BlogPosts.scss
+++ b/src/components/BlogPosts.scss
@@ -40,7 +40,7 @@ $serif: athelas,georgia,serif;
             flex-flow: column-reverse nowrap;
 
             .image {
-                margin: 0 !important;
+                margin: 0 0 0.5rem 0 !important;
             }
 
             .words {
