font, mobile style tweaks

--- a/src/components/BlogPosts.scss
+++ b/src/components/BlogPosts.scss
@@ -17,7 +17,7 @@ $serif: athelas,georgia,serif;
         }
 
         .label {
-            color: #aaa;
+            color: #bbb;
         }
     }
 
@@ -85,7 +85,7 @@ $serif: athelas,georgia,serif;
 
             .date-author {
                 font-size: 0.75rem;
-                color: #aaa;
+                color: #bbb;
 
                 .date {
                     margin-bottom: 0.15rem;
