--- a/src/components/BlogPosts.scss
+++ b/src/components/BlogPosts.scss
@@ -18,6 +18,8 @@ $serif: athelas,georgia,serif;
 
         .label {
             color: #bbb;
+            font-weight: 200;
+            margin-right: 0.2rem;
         }
     }
 
@@ -74,7 +76,7 @@ $serif: athelas,georgia,serif;
 
                 .subtitle {
                     font-family: $sans-serif;
-                    font-weight: 300;
+                    font-weight: 200;
                     color: #4cb69f;
                     font-size: 1.25rem;
                     line-height: 1.75rem;
