--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -185,8 +185,7 @@ $serif: athelas,georgia,serif;
                     color: black;
                     text-decoration: none;
                     border-bottom: 1px solid #4cb69f;
-                    // background-color: #EDF7F5;
-                    // padding: 0 0.2rem;
+                    padding-bottom: 0.1rem;
 
                     &:hover, &:active, &:focus {
                         color: #4cb69f;
